--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 SUPABASE_URL=https://your-project-ref.supabase.co
 SUPABASE_ANON_KEY=your-supabase-anon-key
 FRONTEND_ORIGIN=http://localhost:3000
+TMDB_API_KEY=your-tmdb-api-key
