feat: add oauth login and service-role profile handling

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 SUPABASE_URL=https://your-project-ref.supabase.co
 SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 FRONTEND_ORIGIN=http://localhost:3000
 TMDB_API_KEY=your-tmdb-api-key
